--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 ## Process this file with autoconf to produce a configure script.
-# Copyright © 2003, 2005, 2012, 2014 Dale Mellor
-# <dale_mellor@users.sourceforge.net>
+#
+# Copyright © 2003, 2005, 2012, 2014 Dale Mellor <mcron-lsfnyl@rdmp.org>
 # Copyright © 2015, 2016, 2017, 2018 Mathieu Lirzin <mthl@gnu.org>
 # Copyright © 2018 宋文武 <iyzsong@member.fsf.org>
 #
@@ -20,19 +20,18 @@
 # along with GNU Mcron.  If not, see <http://www.gnu.org/licenses/>.
 
 AC_PREREQ(2.61)
-AC_INIT([GNU Mcron], [1.1.4], [bug-mcron@gnu.org])
-AC_CONFIG_SRCDIR([src/mcron.c])
+AC_INIT([GNU Mcron], [1.1.4+], [bug-mcron@gnu.org])
+AC_CONFIG_SRCDIR([src/mcron/scripts/mcron.scm])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_REQUIRE_AUX_FILE([test-driver.scm])
-AM_INIT_AUTOMAKE([subdir-objects -Wall -Wno-override std-options])
-AM_SILENT_RULES([yes])		# enables silent rules by default
+
+dnl We're fine with GNU make constructs, hence '-Wno-portability'.
+AM_INIT_AUTOMAKE([1.11 gnu silent-rules subdir-objects color-tests
+                  -Wall -Wno-override -Wno-portability std-options])
+
+AM_SILENT_RULES([yes])		# Enables silent rules by default.
 
 AC_CANONICAL_HOST
-AC_PROG_AWK
-AC_PROG_EGREP
-AM_PROG_CC_C_O
-AC_PROG_RANLIB
-AM_PROG_AR
 
 # Check for Guile development files.
 GUILE_PKG([3.0 2.2 2.0])
@@ -40,12 +39,6 @@ GUILE_PKG([3.0 2.2 2.0])
 # Set Guile flags without using GUILE_FLAGS which is requiring the unused
 # 'config.rpath' script.
 PKG_CHECK_MODULES(GUILE, [guile-$GUILE_EFFECTIVE_VERSION])
-
-# Check for 'argp' program arguments parser.
-AC_CHECK_FUNC(argp_parse, [], AC_MSG_ERROR([argp not found]))
-
-# Check for non-POSIX string formatting function.
-AC_CHECK_FUNC(asprintf, [], AC_MSG_ERROR([asprintf not found]))
 
 # Checks for programs.
 
@@ -76,8 +69,8 @@ AC_MSG_CHECKING([which spool directory to use])
 AC_ARG_WITH(spool-dir,
             AC_HELP_STRING([--with-spool-dir],
                            [the crontab spool directory (/var/cron/tabs)]),
-              CONFIG_SPOOL_DIR=$withval,
-              CONFIG_SPOOL_DIR=[/var/cron/tabs])
+            CONFIG_SPOOL_DIR=$withval,
+            CONFIG_SPOOL_DIR=[/var/cron/tabs])
 AC_MSG_RESULT($CONFIG_SPOOL_DIR)
 AC_SUBST(CONFIG_SPOOL_DIR)
 
@@ -85,8 +78,8 @@ AC_MSG_CHECKING([name of socket])
 AC_ARG_WITH(socket-file,
             AC_HELP_STRING([--with-socket-file],
                            [unix pathname for cron socket (/var/cron/socket)]),
-              CONFIG_SOCKET_FILE=$withval,
-              CONFIG_SOCKET_FILE=[/var/cron/socket])
+            CONFIG_SOCKET_FILE=$withval,
+            CONFIG_SOCKET_FILE=[/var/cron/socket])
 AC_MSG_RESULT($CONFIG_SOCKET_FILE)
 AC_SUBST(CONFIG_SOCKET_FILE)
 
@@ -94,8 +87,8 @@ AC_MSG_CHECKING([name of allow file])
 AC_ARG_WITH(allow-file,
             AC_HELP_STRING([--with-allow-file],
                            [the file of allowed users (/var/cron/allow)]),
-              CONFIG_ALLOW_FILE=$withval,
-              CONFIG_ALLOW_FILE=[/var/cron/allow])
+            CONFIG_ALLOW_FILE=$withval,
+            CONFIG_ALLOW_FILE=[/var/cron/allow])
 AC_MSG_RESULT($CONFIG_ALLOW_FILE)
 AC_SUBST(CONFIG_ALLOW_FILE)
 
@@ -103,8 +96,8 @@ AC_MSG_CHECKING([name of deny file])
 AC_ARG_WITH(deny-file,
             AC_HELP_STRING([--with-deny-file],
                            [the file of barred users (/var/cron/deny)]),
-              CONFIG_DENY_FILE=$withval,
-              CONFIG_DENY_FILE=[/var/cron/deny])
+            CONFIG_DENY_FILE=$withval,
+            CONFIG_DENY_FILE=[/var/cron/deny])
 AC_MSG_RESULT($CONFIG_DENY_FILE)
 AC_SUBST(CONFIG_DENY_FILE)
 
@@ -112,8 +105,8 @@ AC_MSG_CHECKING([name of PID file])
 AC_ARG_WITH(pid-file,
             AC_HELP_STRING([--with-pid-file],
                            [the file to record cron's PID (/var/run/cron.pid)]),
-              CONFIG_PID_FILE=$withval,
-              CONFIG_PID_FILE=[/var/run/cron.pid])
+            CONFIG_PID_FILE=$withval,
+            CONFIG_PID_FILE=[/var/run/cron.pid])
 AC_MSG_RESULT($CONFIG_PID_FILE)
 AC_SUBST(CONFIG_PID_FILE)
 
@@ -121,19 +114,19 @@ AC_MSG_CHECKING([directory to hold temporary files])
 AC_ARG_WITH(tmp-dir,
             AC_HELP_STRING([--with-tmp-dir],
                            [directory to hold temporary files (/tmp)]),
-              CONFIG_TMP_DIR=$withval,
-              CONFIG_TMP_DIR=[/tmp])
+            CONFIG_TMP_DIR=$withval,
+            CONFIG_TMP_DIR=[/tmp])
 AC_MSG_RESULT($CONFIG_TMP_DIR)
 AC_SUBST(CONFIG_TMP_DIR)
 
 # Include the Maintainer's Makefile fragment, if it's here.
 MAINT_MAKEFILE=/dev/null
 AS_IF([test -r "$srcdir/maint.mk"],
-  [MAINT_MAKEFILE="$srcdir/maint.mk"])
+      [MAINT_MAKEFILE="$srcdir/maint.mk"])
 AC_SUBST_FILE([MAINT_MAKEFILE])
 
 AC_CONFIG_FILES([pre-inst-env:build-aux/pre-inst-env.in],
-  [chmod +x pre-inst-env])
+                [chmod +x pre-inst-env])
 AC_CONFIG_FILES([doc/config.texi
                  Makefile
                  src/mcron/config.scm])
