build: Distribute script source files
This allows 'make distcheck' to succeed.

* Makefile.am (EXTRA_DIST): Add script source files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -148,6 +148,9 @@ EXTRA_DIST = \
   bootstrap \
   build-aux/guix.scm \
   HACKING \
+  src/cron.in \
+  src/crontab.in \
+  src/mcron.in \
   tests/init.sh \
   $(TESTS)
 
