scripts: Separate build/install directory context
This prevents installed modules to interfere with the ones from the
build directory.

* src/cron.in: Augment Guile load paths with install directories only
when MCRON_UNINSTALLED environment variable is not set.
* src/crontab.in: Likewise.
* src/mcron.in: Likewise.

--- a/src/crontab.in
+++ b/src/crontab.in
@@ -2,6 +2,8 @@
 -*- scheme -*-
 !#
 
-(set! %load-path (cons "%modsrcdir%" %load-path))
-(set! %load-compiled-path (cons "%modbuilddir%" %load-compiled-path))
+(unless (getenv "MCRON_UNINSTALLED")
+  (set! %load-path (cons "%modsrcdir%" %load-path))
+  (set! %load-compiled-path (cons "%modbuilddir%" %load-compiled-path)))
+
 ((@ (mcron scripts crontab) main))
