tests: Check (mcron vixie-specification)
* tests/vixie-specification.scm: New file.
* Makefile.am (TESTS): Register it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -138,6 +138,7 @@ TESTS = \
   tests/environment.scm \
   tests/job-specifier.scm \
   tests/utils.scm \
+  tests/vixie-specification.scm \
   tests/vixie-time.scm
 
 ## -------------- ##
