Incorporate and use command-line-processor proposed for Guile core
Since the elimination of the C wrapping around mcron and all the
executable scripts, a weakness in Guile's (ice-9 getopt-long) module
means that the command 'mcron -s crontab.scm' does not currently
work.  A replacement for the getopt-long module, as well as a
higher-level 'command-line-processor' facility, have been pushed to
the Guile upstream developers and are awaiting approval and
incorporation.  In the meantime, those modules are temporarily
incorporated here into the mcron package, and the code is modified
to use those local versions.

 * Makefile.am: install two new Guile modules
 * src/{cron,crontab,mcron}.in: use local command-line-processor module
 * src/mcron/command-line-processor.scm: new module
 * src/mcron/getopt-long.scm: new module
 * tests/schedule{,-2}.sh: clarify tests of -s, --schedule options

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,9 @@ pkgmoduledir = $(guilesitedir)/$(PACKAGE)
 pkgmodule_DATA = src/mcron/config.scm
 dist_pkgmodule_DATA = \
   src/mcron/base.scm \
+  src/mcron/command-line-processor.scm \
   src/mcron/environment.scm \
+  src/mcron/getopt-long.scm \
   src/mcron/job-specifier.scm \
   src/mcron/redirect.scm \
   src/mcron/utils.scm \
