--- a/src/mcron.in
+++ b/src/mcron.in
@@ -6,5 +6,6 @@
   (set! %load-path (cons "%modsrcdir%" %load-path))
   (set! %load-compiled-path (cons "%modbuilddir%" %load-compiled-path)))
 
-(use-modules (mcron scripts mcron))
-(main)
+(use-modules (mcron scripts mcron)
+             (mcron utils))
+(catch-mcron-error (main))
