cron doesnʼt need the --log-format and --date-format options.
* src/cron.in: remove the options
* src/mcron/scripts/cron.scm: no need for extra processing

--- a/src/cron.in
+++ b/src/cron.in
@@ -27,6 +27,7 @@
   (set! %load-compiled-path (cons "%modbuilddir%" %load-compiled-path)))
 
 (use-modules  (mcron scripts cron)
+              (mcron utils)
               (ice-9 command-line-processor))
 
 (process-command-line  (command-line)
